# cloud-native-maturity-evaluate

./: .env.example  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  start.sh
api/: __init__.py  main.py
api/models/: __init__.py  schemas.py
api/routers/: __init__.py  analyze.py  collect.py  config.py  knowledge.py  mock_data.py
api/services/: __init__.py  analyze_service.py  collect_service.py  config_service.py  guidance_service.py  knowledge_service.py
k8s/: sesora.yaml
run_pipeline/: collect_data.py  collect_mock_data.py  main.py  mock.json  run_analyzer.py  run_cases.json  run_guidance_agent.py  run_one_collector.py
sesora/: __init__.py  engine.py
sesora/analyzers/: __init__.py
sesora/analyzers/automation/: __init__.py  cicd.py  gitops.py  iac.py  ops.py
sesora/analyzers/elasticity/: __init__.py  hpa.py  lb.py  rm.py  vpa.py
sesora/analyzers/observability/: __init__.py  logging.py  monitoring.py  tracing.py  visualization.py
sesora/analyzers/resilience/: __init__.py  dr.py  fault_tolerance.py  ha.py  health.py
sesora/analyzers/serverless/: __init__.py  data.py  eda.py  faas.py
sesora/analyzers/service_arch/: __init__.py  api.py  comm.py  data_mgmt.py
sesora/collectors/: ack_collector.py  acr_collector.py  alb_collector.py  arms_collector.py  cms_collector.py  codeup_collector.py  ecs_collector.py  eventbridge_collector.py  fc_collector.py  generic_collector.py  grafana_collector.py  gtm_collector.py  oss_collector.py  rds_collector.py  ros_collector.py  sls_collector.py  tair_collector.py
sesora/core/: __init__.py  analyzer.py  collector.py  context.py  dataitem.py  report.py
sesora/schema/: __init__.py  acr.py  apm.py  chaos.py  cloud_storage.py  cms.py  codeup.py  ecs.py  eventbridge.py  fc.py  grafana.py  k8s.py  manual.py  policy.py  rds_oss.py  registry.py  ros.py  sls.py
sesora/store/: __init__.py  sqlite_store.py
sesora/utils/: AgentFactory.py  agent_assisted_assessor.py  agent_guidance.py  incremental.py  knowledge_base.py  manual_semantic_assessor.py
web/: nginx.conf.template  package-lock.json  package.json
web/src/: App.vue  main.js  router.js  style.css
web/src/api/: index.js
web/src/views/: AnalyzeView.vue  CollectView.vue  ConfigView.vue  KnowledgeView.vue  MockDataView.vue
